--- a/main.html
+++ b/main.html
@@ -3,17 +3,16 @@
   <head>
     <meta charset="utf-8">
     <title>Lady Quark</title>
-    <link rel="stylesheet" href="css/master.css">
+    <link rel="stylesheet" href="master.css">
     <link href="https://fonts.googleapis.com/css?family=Cutive+Mono" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.16/p5.min.js" type="text/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.16/addons/p5.sound.min.js" type="text/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.16/addons/p5.dom.min.js" type="text/javascript"></script>
-    <script src="js/mohrSquare.js" charset="utf-8"></script>
-    <script src="js/math.js" charset="utf-8"></script>
+    <script src="mohrSquare.js" charset="utf-8"></script>
   </head>
   <body>
 
-    <script src="js/main.js" type="text/javascript"></script>
+    <script src="main.js" type="text/javascript"></script>
         <h1>An homage to Manfred Mohr</h1>
   </body>
 </html>
